# PECS

./: .env  .env.default  .gitignore  .helpers.zsh  CMakeLists.txt  README.md  compile_commands.json  compile_shaders.zsh  generate_header.zsh  generate_headers.zsh  install.zsh  makefile  makefile.default  premake5.lua  uninstall.zsh  vkvia.html
include/: pecs-core.hpp  pecs-objects.hpp  pecs.hpp  templates.hpp  vecs.hpp
include/pecs/: core.hpp  declarations.hpp  enums.hpp  mainloop.hpp  objects.hpp  structs.hpp
include/vecs/: templates.hpp  vecs.hpp
sample_program/: main  main.cpp
samples/basic_shapes/: shapes.cpp
samples/falling_box/: fallingbox.cpp
samples/rotating_rectangle/: rotation.cpp
samples/spv/: default.vert.spv  fallingbox.frag.spv
samples/triangle/: triangle.cpp  triangle.vert.spv
samples/triangles/: triangle1.vert.spv  triangle2.vert.spv  triangles.cpp
shaders/: missing.frag.spv
shaders/fragment/: default.frag  fallingbox.frag  missing.frag  triangle.frag
shaders/vertex/: default.vert  fallingbox.vert  triangle.vert  triangle1.vert  triangle2.vert
src/: debug.cpp  device.cpp  engine.cpp  graphicspipeline.cpp  gui.cpp  loop.cpp  object.cpp  pipeline.cpp  queues.cpp  renderer.cpp  settings.cpp  window.cpp
src/core/: components.cpp  device.cpp  deviceallocation.cpp  engine.cpp  entities.cpp  entitycontroller.cpp  graphics.cpp  gui.cpp  (+12 more)
tests/: components_tests.cpp  entities_tests.cpp  entity_tests.cpp  main.cpp  settings_test.cpp  settings_tests.cpp  signature_tests.cpp  systems_tests.cpp  test_classes.hpp  test_ecs.hpp  utils.hpp
(+68 files in other folders)
